@@ -4,8 +4,10 @@ import io.cucumber.core.backend.CucumberBackendException;
 import io.cucumber.core.backend.ObjectFactory;
 import org.apache.openejb.OpenEjbContainer;
 import org.apiguardian.api.API;
+import org.jspecify.annotations.Nullable;
 
 import javax.ejb.embeddable.EJBContainer;
+import javax.naming.Context;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -14,12 +16,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 
+import static java.util.Objects.requireNonNull;
+
 @API(status = API.Status.STABLE)
 public final class OpenEJBObjectFactory implements ObjectFactory {
 
     private final List<String> classes = new ArrayList<String>();
     private final Map<Class<?>, Object> instances = new HashMap<Class<?>, Object>();
-    private EJBContainer container;
+    private @Nullable EJBContainer container;
 
     @Override
     public void start() {
@@ -38,7 +42,9 @@ public final class OpenEJBObjectFactory implements ObjectFactory {
 
     @Override
     public void stop() {
-        container.close();
+        if (container != null) {
+            container.close();
+        }
         instances.clear();
     }
 
@@ -56,8 +62,9 @@ public final class OpenEJBObjectFactory implements ObjectFactory {
 
         T object;
         try {
-            object = type.newInstance();
-            container.getContext().bind("inject", object);
+            object = type.getDeclaredConstructor().newInstance();
+            Context context = requireNonNull(container).getContext();
+            context.bind("inject", object);
         } catch (Exception e) {
             throw new CucumberBackendException("can't create " + type.getName(), e);
         }
